#  Copyright (C) 2022 Raúl Wolters
#  
#  This file is part of srvr.
#  
#  srvr is free software: you can redistribute it and/or modify it under the
#  terms of the European Union Public License (EUPL), provided that you publish
#  your modifications under the terms of the EUPL or another compatible license
#  as specified by the EUPL v1.2 or higher.
#
#  As the copyright holder is a citizen of the Kingdom of the Netherlands, this
#  license agreement shall be governed by dutch law, as specified in clause 17
#  of the EUPL v1.2.
#
#  srvr is distributed in the hope that it will be useful, but WITHOUT ANY
#  WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
#  A PARTICULAR PURPOSE.  See the European Union Public License for more details.
#  
#  You should have received a copy of the European Union Public License in a
#  official language of the European Union along with srvr. If not, see
#  <https://joinup.ec.europa.eu/collection/eupl/eupl-text-eupl-12> for the full
#  text of the license in any official language of the European Union.

[workspace]
resolver = "2"
members = [
    #"srvr",
    "srvr-async",
    "srvr-sysplugin",
    "srvr-sysproto",
    "srvr-sysdata",
    "srvr-sysworld",
    #"srvr-sysnbt",
    #Default plugins
    "sample-plugin",
    #Default world generators
    "srvr-wgsuperflat"
]


[profile.rust-analyzer]
inherits = "dev"
opt-level = 0

# Using cargo flamegraph, this is needed.
# See more: https://github.com/flamegraph-rs/flamegraph
[profile.release]
debug = true

[profile.dev]
opt-level = 2
lto = false

[profile.bench]
opt-level = 2

# Used when we make our final binary.
[profile.deploy]
inherits = "release"
opt-level = 3
lto = true
debug = false

[profile.tarpaulin]
inherits = "rust-analyzer"