[package]
name = "srvr-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Async runtime is Tokio (MIT is EUPL compatible)
tokio = {version="*"}

#Nice utility for dealing with versions
semver = "*"

#Loggin system
log = "*"
log4rs = "*"

#keeping track of time
time = "*"
chrono = "*"