[package]
name = "srvr-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Async runtime is Tokio (MIT is EUPL compatible)
tokio = {version="*", features=['rt', 'rt-multi-thread', 'net']}

#Nice utility for dealing with versions
semver = "*"

#Logging system
log = "*"
log4rs = "*"

#keeping track of time
time = "*"
chrono = "*"

#serde stuff
serde = {version="*", features=['derive']}
toml = "*"