[package]
name = "srvr-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#srvr dependencies
srvr-sysplugin = {path="../srvr-sysplugin", version="*" }
srvr-sysproto = {path="../srvr-sysproto", version="*"}
srvr-sysworldgen = {path="../srvr-sysworld", version="*"}

#Nice utility for dealing with versions
semver = "*"

#Logging system
log = "*"
log4rs = "*"

#keeping track of time
time = "*"
chrono = "*"

#serde stuff
serde = {version="*", features=['derive']}
toml = "*"

#random numbers
rand = "*"

#Async runtime is Tokio (MIT is EUPL compatible)
[dependencies.tokio]
version = "*"
features = [
  'rt',
  'rt-multi-thread',
  'net',
  'sync',
  'time'
]