[package]
name = "srvr-wgsuperflat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srvr-sysworldgen = {path="../srvr-sysworld", version="*", features=['worldgen']}
log = "*"

[lib]
name = "overworld_generator"
crate-type = ["cdylib"]