[package]
name = "srvr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "*"
srvr-sysplugin = { path = "../srvr-sysplugin", version = "*" }
srvr-sysproto = {path = "../srvr-sysproto", version = "*"}
serde = "*"